# Waitlist-Mailchimp-API-Connect

./: Dockerfile  db.sqlite3  pyproject.toml
api/: models.py  serializers.py  views.py
api/migrations/: 0001_initial.py
waitlist/: asgi.py  settings.py  urls.py  wsgi.py
waitlist/api/: models.py  views.py
